--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="d-flex flex-column align-items-center justify-content-center vh-100 text-center">
 
    
-        <img src="fotos/logo.png" alt="Logo" class="img-fluid mb-3">
+        <img src="/logo.png" alt="Logo" class="img-fluid mb-3">
         <a href="planos.html" class="btn btn-primary button">Criar planos</a>
 
     
