--- a/planos.html
+++ b/planos.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plano alimentar</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="feijoada.ico" type="image/x-icon">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .combinado-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+        .remove-combinado {
+            margin-left: 10px;
+            color: red;
+            cursor: pointer;
+            background: none;
+            border: none;
+            font-size: 1.2em; /* Torna o 'x' um pouco maior */
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body class="container mt-4">
     <h1 class="text-center">Plano alimentar</h1>
 
-    <form class="mt-3">
+    <form id="planoForm" class="mt-3">
         <div class="mb-3">
             <label class="form-label">Nome:</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" id="nome" required>
         </div>
         <div class="mb-3">
             <label class="form-label">Data:</label>
-            <input type="text" class="form-control">
-        </div>
+            <input type="date" class="form-control" id="data" required> </div>
         <div class="mb-3">
             <label class="form-label">Combinados:</label>
-            <input type="text" class="form-control">
-        </div>
+            <input type="text" class="form-control" id="combinados" placeholder="Pressione Enter para adicionar">
+            </div>
         <div class="mb-3">
             <label class="form-label">Café da manhã:</label>
-            <input type="text" class="form-control">
+            <textarea class="form-control" id="cafeManha" rows="3" required></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Intervalo da manhã:</label>
-            <input type="text" class="form-control">
+            <textarea class="form-control" id="intervaloManha" rows="3"></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Almoço:</label>
-            <input type="text" class="form-control">
+            <textarea class="form-control" id="almoco" rows="3" required></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Intervalo da tarde:</label>
-            <input type="text" class="form-control">
+            <textarea class="form-control" id="intervaloTarde" rows="3"></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Jantar:</label>
-            <input type="text" class="form-control">
+            <textarea class="form-control" id="jantar" rows="3" required></textarea>
         </div>
+
+        <button type="button" class="btn btn-primary" onclick="gerarPDF()">Gerar PDF</button>
     </form>
-    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="script.js"></script>
+
 </html>
