--- a/planos.html
+++ b/planos.html
@@ -23,11 +23,14 @@
             font-size: 1.2em; /* Torna o 'x' um pouco maior */
             font-weight: bold;
         }
+        .text{
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+        }
     </style>
 </head>
 
 <body class="container mt-4">
-    <h1 class="text-center">Plano alimentar</h1>
+    <h1 class="text-center text-secondary text">Plano alimentar</h1>
 
     <form id="planoForm" class="mt-3">
         <div class="mb-3">
