--- a/planos.html
+++ b/planos.html
@@ -9,25 +9,17 @@
     <link rel="shortcut icon" href="feijoada.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .combinado-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 5px;
+        .text{
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
         }
-        .remove-combinado {
-            margin-left: 10px;
-            color: red;
-            cursor: pointer;
-            background: none;
-            border: none;
-            font-size: 1.2em; /* Torna o 'x' um pouco maior */
-            font-weight: bold;
+        .button{
+            margin-left: 195px;
         }
     </style>
 </head>
 
 <body class="container mt-4">
-    <h1 class="text-center">Plano alimentar</h1>
+    <h1 class="text-center text-secondary text">Plano alimentar</h1>
 
     <form id="planoForm" class="mt-3">
         <div class="mb-3">
@@ -36,11 +28,12 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Data:</label>
-            <input type="date" class="form-control" id="data" required> </div>
+            <input type="date" class="form-control" id="data" required>
+        </div>
         <div class="mb-3">
             <label class="form-label">Combinados:</label>
-            <input type="text" class="form-control" id="combinados" placeholder="Pressione Enter para adicionar">
-            </div>
+            <textarea class="form-control" id="combinados" rows="3"></textarea>
+        </div>
         <div class="mb-3">
             <label class="form-label">Café da manhã:</label>
             <textarea class="form-control" id="cafeManha" rows="3" required></textarea>
@@ -62,7 +55,8 @@
             <textarea class="form-control" id="jantar" rows="3" required></textarea>
         </div>
 
-        <button type="button" class="btn btn-primary" onclick="gerarPDF()">Gerar PDF</button>
+        <button type="button" class="btn btn-primary me-2" onclick="gerarPDF()">Gerar PDF</button>
+        <button type="button" class="btn btn-danger button" onclick="limparFormulario()">Limpar Formulário</button>
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
