adicionando o campo ceia

--- a/planos.html
+++ b/planos.html
@@ -54,6 +54,10 @@
             <label class="form-label">Jantar:</label>
             <textarea class="form-control" id="jantar" rows="3" required></textarea>
         </div>
+        <div class="mb-3">
+            <label class="form-label">Ceia:</label>
+            <textarea class="form-control" id="ceia" rows="3"></textarea>
+        </div>
 
         <button type="button" class="btn btn-primary me-2" onclick="gerarPDF()">Gerar PDF</button>
         <button type="button" class="btn btn-danger button" onclick="limparFormulario()">Limpar Formulário</button>
